# RUCDataStructureLab4-ChineseWordSegmentation

./: CMakeLists.txt  README.md  in.txt  new_README.md
include/: Dictionary.h  Graph.h
src/: Dictionary.cpp  Dictionary.h  Graph.cpp  Graph.h  Segmenter.cpp  Segmenter.h  main.cpp
